Fixed - No longer spawn in hidden systems

Pets
Added - Expected lifetime indicator on Cryochamber
Adjusted - locking yourself out of the Lord Foog dialogue on Mazalot is no longer permanent and will reset in time depending on what you did
Fixed - Bug where the dialogue for assigning a pet didn't pop up for players with apple PCs (get a proper PC please)

Items
Added - Relic components will now drop from all automated ships that were destroyed (even modded)
Adjusted - Relic components no longer drop from battles with the luddic path
Adjusted - Removed most VPCs from Historian pool
Adjusted - Conflict/Exploration Package VPCs moved from Historian T4 to Historian T3
Adjusted - Drastically reduced drop rates for special items, again
Adjusted - Drive bubble spike now fires when a fleet is in range regardless of hostility

Hullmods
Added - Hellpods. They do what you'd expect them to do: getting your marines killed.
Added - Hand Built now has a proper icon and no longer reuses the printing one
Adjusted - Renamed Hand Built to Forge World Experiment

Skills
Added - Admin skill "Micromanagement": Allows for remote management of items and AI cores after 3 months in office (NPC Only)

Detachments
Fixed - No longer crashes when told to hide in non-nebula systems without a star

Research Projects
Added - Project Prospector: trade survey data for hyperspace topography progress
Adjusted - Show Inputs button is now Show Info and displays a description of what the project actually does (in most cases)
Adjusted - "New Projects" intel now shows which projects actually got unlocked
Fixed - Project Navi no longer displays if pets are disabled
Fixed - New Project intel no longer classed as major event
Fixed - New Project intel now despawns after 31 days

Artillery
Added - Watchtowers now reset to the controlling faction after 31 days if the station is under AI control to avoid deadlocked artillery stations
Adjusted - Increased delay between shots by 2 seconds