@@ -6,7 +6,7 @@ import indevo.ids.Ids;
 import indevo.utils.scripts.SubMarketAddOrRemovePlugin;
 
 public abstract class SharedSubmarketUser extends BaseIndustry implements SharedSubmarketUserAPI {
-    public void addSharedSubmarket() {
+        public void addSharedSubmarket() {
         if (market.isPlayerOwned() && isFunctional() && !market.hasSubmarket(Ids.SHAREDSTORAGE)) {
             Global.getSector().addScript(new SubMarketAddOrRemovePlugin(market, Ids.SHAREDSTORAGE, false));
         }
